--- a/gdmorning.html
+++ b/gdmorning.html
@@ -16,7 +16,7 @@ body{background-color:#000;font-family: 'Shippori Antique', sans-serif;padding: 
 
 <div id='subkonten'>
 <p class='catatan sek' data-text='&#9829;'>
-<b style="font-size:1rem">Hai manis ツ</b><br>
+<b style="font-size:1rem">Hai maya manis ツ</b><br>
 Selamat pagi yaaa <br>
 Jangan lupa sarapan <br>
 Jaga kesehatanmu okeey <3 <br>
